--- a/page.css
+++ b/page.css
@@ -4,9 +4,15 @@ body{
 
 #blue{
     color: rgb(36, 36, 199);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-ul, li, p, h2{
+li, p, h2{
     color: antiquewhite;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
