--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,51 @@
-body{
-    background-color: rgb(40, 38, 38); 
+* {
+    margin: 0;
+    padding: 0;
 }
 
-#blue{
-    color: rgb(36, 36, 199);
+main{
+    width: 100%;
+    height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
+    font-size: small;
 }
 
-li, p, h2{
-    color: antiquewhite;
+.image{
+        width: 50px;
+        height: 50px;
+}
+
+img{
+    width: 100%;
+    height: 100%
+}
+
+.container{
+    padding: 10rem 0;
+    width: 600px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    gap: 30px;  
+}
+
+.selected{
+    color: blue;
+}
+
+.txt{
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+}
+
+h3{
+    font-size: medium;
+    font-weight: 200;
+}
+
+ul{
+    list-style: inside;
+    padding: 25px;;
 }
 
